completed part 3: Add articles

--- a/index.html
+++ b/index.html
@@ -111,6 +111,18 @@
           hodor - hodor hodor hodor. Hodor. Hodor hodor... Hodor hodor hodor hodor hodor? </p>
         <span class='expandButton'></span>
       </div>
+      <div class="article">
+        <h2>I can haz cheezeburger 2019</h2>
+        <p class="date">Nov 7th, 2017</p>
+        <p>Oh hai. In teh beginnin Ceiling Cat maded teh skiez An da Urfs, but he did not eated dem.</p>
+        
+        <p>Da Urfs no had shapez An haded dark face, An Ceiling Cat rode invisible bike over teh waterz.</p>
+        
+        <p>At start, no has lyte. An Ceiling Cat sayz, i can haz lite? An lite wuz.4 An Ceiling Cat sawed teh lite, to seez stuffs, An splitted teh lite from dark but taht wuz ok cuz kittehs can see in teh dark An not tripz over nethin. An Ceiling Cat sayed light Day An dark no Day. It were FURST!!!1</p>
+
+        <p>n Ceiling Cat sayed, im in ur waterz makin a ceiling. But he no yet make a ur. An he maded a hole in teh Ceiling. An Ceiling Cat doed teh skiez with waterz down An waterz up. It happen.8 An Ceiling Cat sayed, i can has teh firmmint wich iz funny bibel naim 4 ceiling, so wuz teh twoth day.</p>
+        <span class='expandButton'></span>
+      </div>
     </div>
   </body>
 </html>
